force-app/main/default/objects/Pooled_Trust__c/Pooled_Trust__c.object-meta.xml
<CustomObject>
    <label>Pooled Trust</label>
    <nameField>
        <label>Pooled Trust Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pooled Trusts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>