force-app/main/default/objects/Pooled_Trust__c/fields/Pooled__c.field-meta.xml
<CustomField>
    <fullName>Pooled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pooled</label>
    <type>Checkbox</type>
</CustomField>