force-app/main/default/objects/Pooled_Trust__c/fields/Trust_EIN__c.field-meta.xml
<CustomField>
    <fullName>Trust_EIN__c</fullName>
    <label>Trust EIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>