force-app/main/default/objects/Pooled_Trust__c/fields/Trust_ID__c.field-meta.xml
<CustomField>
    <fullName>Trust_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Trust ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>