force-app/main/default/objects/Pooled_Trust__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trust_EIN__c</columns>
    <columns>Trust_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>