force-app/main/default/objects/Pooled_Trust__c/listViews/Pooled_Trusts.listView-meta.xml
<ListView>
    <fullName>Pooled_Trusts</fullName>
    <columns>NAME</columns>
    <columns>Trust_EIN__c</columns>
    <columns>Trust_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pooled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Pooled Trusts</label>
</ListView>